Refactor index.html structure and navigation links

--- a/index.html
+++ b/index.html
@@ -7,18 +7,14 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 
-<body>
-  <div>
-    <h1>OLIVER LARIC</h1>
-    <a href="bio.html">Who is he?</a>
+<body class="home">
+  <h1>OLIVER LARIC</h1>
+  <div class="nav-links">
+    <a href="bio.html" class="lilac">Who is he?</a>
+    <a href="versions.html" class="blue">Versions (2011)</a>
+    <a href="icon.html" class="peach">Icon, Utrecht</a>
+    <a href="kopienkritik.html" class="beige">Kopientritik</a>
   </div>
-    <a href="versions.html">Versions (2011)</a>
-    </div>
-    <a href="icon.html">Icon, Utrecht </a>
-    </div>
-    <a href="kopienkritik.html">Kopientritik</a>
-  </div>
-</div>
 
 
   <div class="gallery">
