--- a/kopienkritik.html
+++ b/kopienkritik.html
@@ -1,32 +1,44 @@
+<!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>kopienkritik</title>
-    <link rel="stylesheet" href="styles.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Kopienkritik</title>
+  <link rel="stylesheet" href="styles.css">
 </head>
-<body>
-    <img src="images/kopienkritik1.png" alt="this is a picture of kopienkritik" class="photo">
-    <img src="images/kopienkritik2.png" alt="this is a picture of kopienkritik" class="photo">
-    <img src="images/kopienkritik3.png" alt="this is a picture of kopienkritik" class="photo">
-    <img src="images/kopienkritik4.png" alt="this is a picture of kopienkritik" class="photo">
-    <img src="images/kopienkritik5.png" alt="this is a picture of kopienkritik" class="photo">
-    <img src="images/kopienkritik1.png" alt="this is a picture of kopienkritik" class="photo">
-    <img src="images/kopienkritik2.png" alt="this is a picture of kopienkritik" class="photo">
-    <img src="images/kopienkritik3.png" alt="this is a picture of kopienkritik" class="photo">
-    <img src="images/kopienkritik4.png" alt="this is a picture of kopienkritik" class="photo">
-    <img src="images/kopienkritik5.png" alt="this is a picture of kopienkritik" class="photo">
-     
-    <h1>KOPIENKRITIK</h1>
-        <div class="back">
-        <a href="index.html">back</a>
-        <p class="back"> 
+<body class="kopienkritik-page">
 
-     <p class="kopienkritik">Kopienkritik (2011) is a multimedia installation by Oliver Laric, which was displayed at Skulpturhalle Basel. This work revolves around a series of plaster cast replications of classical antiquity sculptures. The original pieces dated back to 150-200 CE. He utilises video and sculpture within this project as he had his work projected across monitors to be seen. In this installment, Laric explores authenticity, authorship, and the evolving significance of reproduction in art throughout history. Kopienkritik refers to the “process of analysing copies of classic sculptures – typically Roman reproductions of lost Greek versions – to arrive at a greater understanding of the originals” (Karen Archey, Rhizome). Overall, Kopienkritik intends to have the audience reflect on how artists are not a creator but rather producers of ideas. 
-</p>
-    <img src="images/kopienkritik2.jpg" alt="this is a picture of kopienkritik" class="photo">
-    <img src="images/kopienkritik1.jpg" alt="this is a picture of kopienkritik" class="photo">
+  <a href="index.html" class="back">back</a>
 
-    </div>
+  <div class="floating-images">
+    <img src="images/kopienkritik1.png" alt="kopienkritik object">
+    <img src="images/kopienkritik2.png" alt="kopienkritik object">
+    <img src="images/kopienkritik3.png" alt="kopienkritik object">
+    <img src="images/kopienkritik4.png" alt="kopienkritik object">
+    <img src="images/kopienkritik5.png" alt="kopienkritik object">
+    <img src="images/kopienkritik1.png" alt="kopienkritik object">
+    <img src="images/kopienkritik2.png" alt="kopienkritik object">
+    <img src="images/kopienkritik3.png" alt="kopienkritik object">
+    <img src="images/kopienkritik4.png" alt="kopienkritik object">
+    <img src="images/kopienkritik5.png" alt="kopienkritik object">
+  </div>
+
+  <h1>KOPIENKRITIK</h1>
+
+  <p class="kopienkritik-text"> Kopienkritik (2011) is a multimedia installation by Oliver Laric, which was displayed at Skulpturhalle Basel. 
+    This work revolves around a series of plaster cast replications of classical antiquity sculptures. 
+    The original pieces dated back to 150–200 CE. He utilises video and sculpture within this project as he had his work 
+    projected across monitors to be seen. In this installment, Laric explores authenticity, authorship, and the evolving 
+    significance of reproduction in art throughout history. Kopienkritik refers to the “process of analysing copies of classic 
+    sculptures – typically Roman reproductions of lost Greek versions – to arrive at a greater understanding of the originals” 
+    (Karen Archey, Rhizome). Overall, Kopienkritik intends to have the audience reflect on how artists are not a creator but 
+    rather producers of ideas.
+  </p>
+
+  <div class="bottom-images">
+    <img src="images/kopienkritik2.jpg" alt="installation photo">
+    <img src="images/kopienkritik1.jpg" alt="installation photo">
+  </div>
+
 </body>
 </html>
